First Part Finish

--- a/index.html
+++ b/index.html
@@ -5,12 +5,321 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <!-- FontAwesome Link -->
+    <script src="https://kit.fontawesome.com/08d553c9bd.js" crossorigin="anonymous"></script>
+    <!-- Main Css -->
     <link rel="stylesheet" href="style.css">
+    <title>Influencer Products</title>
 </head>
 
 <body>
-    <h1>Assignment 2</h1>
+    <!-- Start Menu -->
+    <header class="header">
+        <div class="container">
+            <!-- Start Main Header -->
+            <div class="main-header">
+                <div class="logo">
+                    <h2>Influencer products</h2>
+                </div>
+                <div class="menu">
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Products</a></li>
+                        <li><a href="#">Sign up</a></li>
+                        <li><a href="#">Log In</a></li>
+                        <li><a href="#"><i class="fas fa-search"></i></a></li>
+                        <li><a href="#"><i class="fas fa-shopping-cart"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+            <!-- End Main Header -->
+            <!-- Start Mobile Header -->
+            <div class="main-mobile-header">
+                <div class="menu-bar">
+                    <i class="fas fa-bars"></i>
+                </div>
+                <div class="logo">
+                    <h2>Influencer products</h2>
+                </div>
+                <div class="menu-cart">
+                    <i class="fas fa-shopping-cart"></i>
+                </div>
+            </div>
+            <!-- End Mobile Header -->
+        </div>
+    </header>
+    <!-- End Menu -->
+
+    <!-- Start Banner Section -->
+    <section class="banner-section">
+        <div class="container">
+            <div class="banner">
+                <div class="banner-left">
+                    <h3>Start your Journey as Influencer
+                    </h3>
+                    <p>I am an aspiring coding influencer who is adamant about starting his journey in 2022.</p>
+                    <a href="#" class="banner-btn">
+                        Preebook now <i class="fas fa-arrow-right"></i>
+                    </a>
+                </div>
+                <div class="banner-right">
+                    <img src="images/main-camera.png" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- End Banner Section -->
+    <!-- Start Partner Section -->
+    <section class="partner">
+        <div class="container">
+            <div class="partner-wrap">
+                <div class="partner-box">
+                    <img src="images/logos/Alibaba.svg" alt="">
+                </div>
+                <div class="partner-box">
+                    <img src="images/logos/Amazon.svg" alt="">
+                </div>
+                <div class="partner-box">
+                    <img src="images/logos/Daraz.pk%20Logo.svg" alt="">
+                </div>
+                <div class="partner-box">
+                    <img src="images/logos/Rakuten.svg" alt="">
+                </div>
+                <div class="partner-box">
+                    <img src="images/logos/Walmart.svg" alt="">
+                </div>
+                <div class="partner-box">
+                    <img src="images/logos/Target.svg" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- End Partner Section -->
+    <!-- Start Popular Collection -->
+    <section class="popular">
+        <div class="container">
+            <h3 class="section-title">Popular Collection</h3>
+            <div class="popular-collection">
+                <div class="popular-box">
+                    <div class="popular-box-img">
+                        <img src="images/tripod.png" alt="">
+                    </div>
+                    <p class="popular-box-title">flex tripod</p>
+                    <p class="popular-box-price">$50.48</p>
+                    <div class="popular-box-rating">
+                        <div class="popular-box-icon">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half-alt"></i>
+                        </div>
+                        <p class="popular-box-rating-text">4.99</p>
+                    </div>
+                    <div class="popular-box-content">
+                        <p class="popular-box-text">Wordwide shifting</p>
+                        <p class="popular-box-text">available</p>
+                        <p class="popular-box-text">Buyers protection possible!</p>
+                    </div>
+                </div>
+                <div class="popular-box">
+                    <div class="popular-box-img">
+                        <img src="images/mic.png" alt="">
+                    </div>
+                    <p class="popular-box-title">microphone</p>
+                    <p class="popular-box-price">$50.48</p>
+                    <div class="popular-box-rating">
+                        <div class="popular-box-icon">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half-alt"></i>
+                        </div>
+                        <p class="popular-box-rating-text">4.99</p>
+                    </div>
+                    <div class="popular-box-content">
+                        <p class="popular-box-text">Wordwide shifting</p>
+                        <p class="popular-box-text">available</p>
+                        <p class="popular-box-text">Buyers protection possible!</p>
+                    </div>
+                </div>
+                <div class="popular-box">
+                    <div class="popular-box-img">
+                        <img src="images/airpod.png" alt="">
+                    </div>
+                    <p class="popular-box-title">airbuds</p>
+                    <p class="popular-box-price">$50.48</p>
+                    <div class="popular-box-rating">
+                        <div class="popular-box-icon">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half-alt"></i>
+                        </div>
+                        <p class="popular-box-rating-text">4.99</p>
+                    </div>
+                    <div class="popular-box-content">
+                        <p class="popular-box-text">Wordwide shifting</p>
+                        <p class="popular-box-text">available</p>
+                        <p class="popular-box-text">Buyers protection possible!</p>
+                    </div>
+                </div>
+                <div class="popular-box">
+                    <div class="popular-box-img">
+                        <img src="images/drone.png" alt="">
+                    </div>
+                    <p class="popular-box-title">drone</p>
+                    <p class="popular-box-price">$50.48</p>
+                    <div class="popular-box-rating">
+                        <div class="popular-box-icon">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half-alt"></i>
+                        </div>
+                        <p class="popular-box-rating-text">4.99</p>
+                    </div>
+                    <div class="popular-box-content">
+                        <p class="popular-box-text">Wordwide shifting</p>
+                        <p class="popular-box-text">available</p>
+                        <p class="popular-box-text">Buyers protection possible!</p>
+                    </div>
+                </div>
+                <div class="popular-box">
+                    <div class="popular-box-img">
+                        <img src="images/lights.png" alt="">
+                    </div>
+                    <p class="popular-box-title">light setup</p>
+                    <p class="popular-box-price">$50.48</p>
+                    <div class="popular-box-rating">
+                        <div class="popular-box-icon">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half-alt"></i>
+                        </div>
+                        <p class="popular-box-rating-text">4.99</p>
+                    </div>
+                    <div class="popular-box-content">
+                        <p class="popular-box-text">Wordwide shifting</p>
+                        <p class="popular-box-text">available</p>
+                        <p class="popular-box-text">Buyers protection possible!</p>
+                    </div>
+                </div>
+                <div class="popular-box">
+                    <div class="popular-box-img">
+                        <img src="images/setup.png" alt="">
+                    </div>
+                    <p class="popular-box-title">photoshoot set</p>
+                    <p class="popular-box-price">$50.48</p>
+                    <div class="popular-box-rating">
+                        <div class="popular-box-icon">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half-alt"></i>
+                        </div>
+                        <p class="popular-box-rating-text">4.99</p>
+                    </div>
+                    <div class="popular-box-content">
+                        <p class="popular-box-text">Wordwide shifting</p>
+                        <p class="popular-box-text">available</p>
+                        <p class="popular-box-text">Buyers protection possible!</p>
+                    </div>
+                </div>
+                <div class="popular-box">
+                    <div class="popular-box-img">
+                        <img src="images/camera.png" alt="">
+                    </div>
+                    <p class="popular-box-title">vlogging camera</p>
+                    <p class="popular-box-price">$50.48</p>
+                    <div class="popular-box-rating">
+                        <div class="popular-box-icon">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half-alt"></i>
+                        </div>
+                        <p class="popular-box-rating-text">4.99</p>
+                    </div>
+                    <div class="popular-box-content">
+                        <p class="popular-box-text">Wordwide shifting</p>
+                        <p class="popular-box-text">available</p>
+                        <p class="popular-box-text">Buyers protection possible!</p>
+                    </div>
+                </div>
+                <div class="popular-box">
+                    <div class="popular-box-img">
+                        <img src="images/single-light.png" alt="">
+                    </div>
+                    <p class="popular-box-title">green screen</p>
+                    <p class="popular-box-price">$50.48</p>
+                    <div class="popular-box-rating">
+                        <div class="popular-box-icon">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half-alt"></i>
+                        </div>
+                        <p class="popular-box-rating-text">4.99</p>
+                    </div>
+                    <div class="popular-box-content">
+                        <p class="popular-box-text">Wordwide shifting</p>
+                        <p class="popular-box-text">available</p>
+                        <p class="popular-box-text">Buyers protection possible!</p>
+                    </div>
+                </div>
+                <div class="popular-box">
+                    <div class="popular-box-img">
+                        <img src="images/action.png" alt="">
+                    </div>
+                    <p class="popular-box-title">action camera</p>
+                    <p class="popular-box-price">$50.48</p>
+                    <div class="popular-box-rating">
+                        <div class="popular-box-icon">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half-alt"></i>
+                        </div>
+                        <p class="popular-box-rating-text">4.99</p>
+                    </div>
+                    <div class="popular-box-content">
+                        <p class="popular-box-text">Wordwide shifting</p>
+                        <p class="popular-box-text">available</p>
+                        <p class="popular-box-text">Buyers protection possible!</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- End Popular Collection -->
+    <!-- Start Transtions Section -->
+    <section class="transtion">
+        <div class="container"></div>
+    </section>
+    <!-- End Transtions Section -->
+    <!-- Start footer -->
+    <footer>
+        <h3 class="footer-title">Influencer products</h3>
+        <p class="footer-text">Copyright &copy; 2020 influencer products</p>
+        <p class="footer-text">All rights reserved</p>
+        <ul class="footer-social">
+            <li><a href=""><i class="fab fa-instagram"></i></a></li>
+            <li><a href=""><i class="fab fa-dribbble"></i></a></li>
+            <li><a href=""><i class="fab fa-twitter"></i></a></li>
+            <li><a href=""><i class="fab fa-youtube"></i></a></li>
+        </ul>
+    </footer>
+    <!-- End footer -->
 </body>
 
 </html>
