--- a/index.html
+++ b/index.html
@@ -27,9 +27,13 @@
                         <li><a href="#">Products</a></li>
                         <li><a href="#">Sign up</a></li>
                         <li><a href="#">Log In</a></li>
-                        <li><a href="#"><i class="fas fa-search"></i></a></li>
-                        <li><a href="#"><i class="fas fa-shopping-cart"></i></a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
                     </ul>
+                    <div class="menu-icon">
+                        <i class="fas fa-search"></i>
+                        <i class="fas fa-shopping-cart"></i>
+                    </div>
                 </div>
             </div>
             <!-- End Main Header -->
@@ -307,23 +311,30 @@
     <!-- End Popular Collection -->
     <!-- Start Transtions Section -->
     <section class="transtion">
-        <div class="container">
-            <div class="t-effect">
-                <div class="flip-box">
-      <div class="flip-box-front">
-        <div class="inner">
-        <h3>Hover me</h3>
-        </div>
-      </div>
-      <div class="flip-box-back">
-        <div class="inner">
-        <h3>Flip Effect</h3>
-        </div>
-      </div>
-    </div>
+    <div class="container">
+        <div class="t-effect">
+            <div class="effectOne">
+                <div class="effectOne-front">
+                    <div class="effectOne-inner">
+                        <h3>Hover me</h3>
+                    </div>
+                </div>
+                <div class="effectOne-back">
+                    <div class="effectOne-inner">
+                        <h3>Flip Effect</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="effectTwo">
+                <h3>Hover Me Two</h3>
+                <h4 class="item-1">Hover Me Three</h4>
+            </div>
+            <div class="effectThree">
+                <img src="images/airpod.png" alt="">
             </div>
         </div>
-    </section>
+    </div>
+</section>
     <!-- End Transtions Section -->
     <!-- Start footer -->
     <footer>
